# .agents

./: CODEX.md  PORTABLE.md  README.md  environment.md  manifest.json  mcp.md  mcp.template.json  output-templates.md  skills.md  workflows.md
mcp-servers-src/campus-net-mcp/: README.md  pyproject.toml  requirements.txt  server.py
mcp-servers-src/campus-net-mcp/profiles/: _schema.json
mcp-servers-src/campus-net-mcp/profiles/builtin/: index.yaml  jlu.yaml
mcp-servers-src/campus-net-mcp/src/campus_net/: __init__.py  detector.py  session_store.py
mcp-servers-src/campus-net-mcp/src/campus_net/auth/: __init__.py  base.py  carsi.py  cas_vpn.py  cookies_import.py  cookies_merge.py  download_session.py  ensure.py  factory.py  ip_only.py  local_secrets.py  publisher_harvest.py  session_bootstrap.py  system_browser_cookies.py
mcp-servers-src/campus-net-mcp/src/campus_net/download/: __init__.py  cnki.py  crossref_meta.py  figshare.py  html_pdf.py  http_downloader.py  manual_download_report.py  openalex.py  papers.py  pdf_quality.py  playwright_pdf.py  publisher_page.py  rate_limit.py  resolver.py  unpaywall.py
mcp-servers-src/campus-net-mcp/src/campus_net/profile/: __init__.py  discover.py  loader.py  onboard.py  paths.py  registry.py  schema.py
mcp-servers-src/deck-builder/: .gitignore  README.md  package.json
mcp-servers-src/zotero-mcp/: .gitignore  README.md  README_v2.md  package.json
rules/: README.md
rules/codex-global/: AGENTS.md
rules/cursor/: 00-cursor-ide.mdc  (+13 more)
scripts/: setup-codex-agents.ps1  setup-cursor-agents.ps1  sync-ui-ux-skills.ps1
(+248 files in other folders)
